# LatinSquareBotSolver

./: CMakeLists.txt  Client.c  Doxyfile  README.dox  fileHandler.c  fileHandler.h  lsq1-error.txt  makefile  printArray.c  printArray.h  solver.c  solver.h  stack.c  stack.h
